--- a/about.html
+++ b/about.html
@@ -1,1 +1,18 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="Author" content="Ryan">
+        <title>Game</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+
+        <h1>heyy!</h1>
+        
+        <p>I am inside your home!</p>
+
+    </body>
+</html>
 
