--- a/about.html
+++ b/about.html
@@ -6,12 +6,28 @@
         <meta name="Author" content="Ryan">
         <title>Game</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="divs.css">
     </head>
     <body>
 
-        <h1>heyy!</h1>
+        <h1>Ryan Nemeti</h1>
+        <div class="div1">
+            <p>Hey, I'm Ryan, I like game development! The most recent game I created was a game for an AP Computer Science Principles course, which was a platformer based off the hit game castlevania. I am also interested in creating RPG video games, both singleplayer and multiplayer.</p>
+            <p>These are my gamer types.</p>
+        </div>
         
-        <p>I am inside your home!</p>
+        <div class="div2"
+            <p>Here is my definition of a game: "A game is an activity that can be done by one or more people for fun. It often includes some sort of challenging aspect and end goal.</p>
+        </div>
+        
+        <div class="div3">
+            <ul>
+                <li> 67% explorer</li>
+                <li> 47% achiever</li>
+                <li> 47% killer</li>
+                <li> 40% socializer</li>
+            </ul>
+        </div>
 
     </body>
 </html>
