--- a/about.html
+++ b/about.html
@@ -12,8 +12,7 @@
 
         <h1>Ryan Nemeti</h1>
         <div class="div1">
-            <p>Hey, I'm Ryan, I like game development! The most recent game I created was a game for an AP Computer Science Principles course, which was a platformer based off the hit game castlevania. I am also interested in creating RPG video games, both singleplayer and multiplayer.</p>
-            <p>These are my gamer types.</p>
+            <p>Hey, I'm Ryan, I like game development! The most recent game I created was a game for an AP Computer Science Principles course, which was a platformer based off the hit game Castlevania. I am also interested in creating RPG video games, both singleplayer and multiplayer.</p>
         </div>
         
         <div class="div2"
@@ -21,6 +20,7 @@
         </div>
         
         <div class="div3">
+            <p>These are my gamer types.</p>
             <ul>
                 <li> 67% explorer</li>
                 <li> 47% achiever</li>
