--- a/about.html
+++ b/about.html
@@ -28,6 +28,9 @@
                 <li> 40% socializer</li>
             </ul>
         </div>
+        <div class=4>
+            <p>my favorite games are creative ones and skill/strategy based ones, which is probably why some of my favorite games are minecraft and valorant. However, there are a lot of games that don't fit into these categories that I still love, such as pokemon.</p>
+        </div>
 
     </body>
 </html>
