--- a/about.html
+++ b/about.html
@@ -11,6 +11,17 @@
     <body>
 
         <h1>Ryan Nemeti</h1>
+        <div class="div0">
+            <nav id="topNav">
+             <ul>
+                 <li> <a href="index.html">Home</a> </li>
+                 <li> <a href="mission.html">Our Mission</a> </li>
+                 <li> <a href="about.html">About the Designer</a> </li>
+                 <li> <a href="glossary.html">Glossary</a> </li>
+             </ul>
+            </nav>
+        </div>
+   
         <div class="div1">
             <p>Hey, I'm Ryan, I like game development! The most recent game I created was a game for an AP Computer Science Principles course, which was a platformer based off the hit game Castlevania. I am also interested in creating RPG video games, both singleplayer and multiplayer.</p>
         </div>
