--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Game</title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="divs.css">
-        <link rel="icon" type="image/png"  href="/media/logo.png" sizes="16x16">
+        <link rel="icon" type="image/png"  href="/media/Logo.png" sizes="16x16">
     </head>
     <body>
  <nav id="topNav">
