--- a/Glossary.html
+++ b/Glossary.html
@@ -15,6 +15,7 @@
     <li> <a href="index.html">Home</a> </li>
     <li> <a href="mission.html">Our Mission</a> </li>
     <li> <a href="about.html">About the Designer</a> </li>
+    <li> <a href="exploration.html">Explorations</a> </li>
   </ul>
 </nav>
 <p>Key Terms<p>
