--- a/mission.html
+++ b/mission.html
@@ -15,6 +15,7 @@
     <li> <a href="index.html">Home</a> </li>
     <li> <a href="about.html">About the Designer</a> </li>
     <li> <a href="glossary.html">Glossary</a> </li>
+    <li> <a href="exploration.html">Explorations</a> </li>
   </ul>
 </nav>
 <p>Our Mission<p>
