--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
                  <li> <a href="index.html">Home</a> </li>
                  <li> <a href="mission.html">Our Mission</a> </li>
                  <li> <a href="about.html">About the Designer</a> </li>
-                 <li> <a href="glossary.html">Glossary</a> </li>
+                 <li> <a href="Glossary.html">Glossary</a> </li>
                  <li> <a href="exploration.html">Explorations</a> </li>
              </ul>
             </nav>
