--- a/mission.html
+++ b/mission.html
@@ -14,7 +14,7 @@
   <ul>
     <li> <a href="index.html">Home</a> </li>
     <li> <a href="about.html">About the Designer</a> </li>
-    <li> <a href="glossary.html">Glossary</a> </li>
+    <li> <a href="Glossary.html">Glossary</a> </li>
     <li> <a href="exploration.html">Explorations</a> </li>
   </ul>
 </nav>
