--- a/exploration.html
+++ b/exploration.html
@@ -18,6 +18,18 @@
     <li> <a href="Glossary.html">Glossary</a> </li>
   </ul>
 </nav>
-<p>My Explorations</p>
+<h1>My Explorations in Gaming</h1>
+        
+<ul>
+  <li><a href="#board">Board Game Exploration</a></li>
+  <li><a href="#video">Video Game Exploration</a></li>
+</ul>
+        
+<h2 id="board">Board Game Exploration</h2>
+
+
+<h2 id ="video">Video Game Exploration</h2>
+
+
   </body>
 </html>
